admin/assets/stylesheets/elements/_printing.scss
  // needs to be refactored for re-usability
@media print {
  #content {
    padding-bottom: 0;
  }
  .no-print{
    display: none;
  }
}

.pupil-print-table {
  table, td, tr {
    border: 1px dashed $black;
    text-align: center;
    vertical-align: middle;
    margin-bottom: -1px;
    font-size: 16px;
  }
  table {
    border-collapse: collapse;
    width: 100%;
  }
  tr.page
  {
    page-break-before: auto;
    page-break-after: auto;
    page-break-inside: avoid;
  }
  td {
    min-width:250px;
    padding: 1em;
    strong {
      font-size: medium;
    }
  }
  .pupil-content {
    text-align: left;
    font-size: 12px;
    margin-bottom: 50px;
    margin-top:19px;
  }
  .fullname {
    font-size: 22px;
    background: none;
    text-align: left;
    font-weight: bold;
    margin: 0;
  }
  .dob {
    color: $grey-1;
    margin-bottom: -14px
  }
  .information {
    font-size: 26px;
    background: none;
    text-align: left;
    font-weight: bold;
    margin: 0;
  }
  .label {
    font-size: 16px;
  }
  .pin-content {
    text-align: left;
    line-height: 5px;
    font-size: 12px;
    margin-bottom: 13px;
  }
  .qr {
    position: relative;
    left:12px;
    img {
      width: 100px;
      height: 100px;
      float: right;
      position: static;
      margin-top: -135px;
    }
  }
  .url {
    font-size: 16px;
    float: right;
    margin-left: 96px;
    position: static;
    margin-top: -38px;
  }
}

